<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_janazat"
            android:title="@string/menu_janazat" />


        <item
            android:id="@+id/nav_sunan"
            android:title="@string/menu_sunan" />

        <item
            android:id="@+id/nav_salat"
            android:title="@string/menu_salat" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_setting" />

    </group>


    <item android:title="Admin" android:id="@+id/nav_administration" android:enabled="false" android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_send_notification"
                android:title="Notification" />
        </menu>
    </item>

    <item android:title="Account" android:id="@+id/nav_account" android:enabled="false" android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_signOut"
                android:title="Sign Out" />
        </menu>
    </item>

</menu>
